--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-   "name": "earnshark-sdk",
+  "name": "earnshark-sdk",
   "version": "0.0.8",
   "engines": {
     "node": ">=4.0"
@@ -33,5 +33,9 @@
     "bluebird": "^3.4.1",
     "moment": "^2.13.0",
     "request": "^2.72.0"
+  },
+  "devDependencies": {
+    "chai": "^4.1.1",
+    "mocha": "^3.5.0"
   }
 }
