--- a/package.json
+++ b/package.json
@@ -31,8 +31,9 @@
   },
   "dependencies": {
     "bluebird": "^3.4.1",
+    "express": "^4.15.4",
     "moment": "^2.13.0",
-    "request": "^2.72.0"
+    "request": "^2.81.0"
   },
   "devDependencies": {
     "chai": "^4.1.1",
