--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-   "name": "earnshark-sdk",
+  "name": "earnshark-sdk",
   "version": "0.0.8",
   "engines": {
     "node": ">=4.0"
@@ -27,11 +27,16 @@
   "main": "index.js",
   "bin": {},
   "scripts": {
-    "test": "echo \"Warning: no test specified\" && exit 0"
+    "test": "./node_modules/.bin/mocha --reporter spec"
   },
   "dependencies": {
     "bluebird": "^3.4.1",
+    "express": "^4.15.4",
     "moment": "^2.13.0",
-    "request": "^2.72.0"
+    "request": "^2.81.0"
+  },
+  "devDependencies": {
+    "chai": "^4.1.1",
+    "mocha": "^3.5.0"
   }
 }
