Add Codacyas a code analyis tool Fixes #16 (#29)
* Add dependencies for codacy Fix #16

* Add mocha-lcov-reporter Fix #16

--- a/package.json
+++ b/package.json
@@ -31,7 +31,9 @@
   },
   "dependencies": {
     "bluebird": "^3.4.1",
+    "codacy": "^1.0.1-1",
     "express": "^4.15.4",
+    "mocha-lcov-reporter": "^1.3.0",
     "moment": "^2.13.0",
     "request": "^2.81.0"
   },
